<resources>
    <string name="app_name">Share</string>
    <string name="logo">Share</string>
    <string name="login_mobile">手机号码</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="login_loading">登录中…</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="login_register">立即注册</string>
    <string name="server_error">服务器异常…</string>
    <string name="network_error">网络异常…</string>
    <string name="list_status_empty">暂无数据</string>
    <string name="list_status_error">异常..</string>





    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home_page">个人主页</string>
    <string name="settings_personal_info">设置个人资料</string>
    <string name="personal_info">个人资料</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <!--home-->
    <string name="comment">评论</string>
    <string name="share">分享</string>
    <string name="community_topic">社区话题</string>
    <string name="post_topic">发布内容</string>

    <string name="thumbnail">缩略图</string>
    <!--information-->
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="pet">宠物</string>
    <string name="introduce">简介</string>
    <string name="website">博客</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="unknown">未知</string>
    <string name="update_info_success">更新资料成功</string>

    <string name="transition_image">transition_image</string>



</resources>
