<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


        <variable
            name="vm"
            type="com.github.wkw.share.ui.login.LoginViewModel" />

        <variable
            name="presenter"
            type="android.view.View.OnClickListener" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/login_padding"
        android:paddingRight="@dimen/login_padding">

        <TextView
            android:id="@+id/tv_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/logo"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_login_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColorHint="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_login_logo"
            app:theme="@style/TextAppearance.FloatLabelHint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_login_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_mobile"
                android:inputType="phone"
                android:maxLength="11"
                android:selectAllOnFocus="true"
                android:text="@={vm.mobile}"
                android:textColorHighlight="@android:color/black" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/tl_login_mobile"
            app:passwordToggleEnabled="true"
            app:theme="@style/TextAppearance.FloatLabelHint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:text="@={vm.password}"
                android:textColorHighlight="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{(v)->presenter.onClick(v)}"
            android:text="@string/login_forget_password"
            android:textColor="@color/text_forget_password"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_login_password" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_button_background"
            android:enabled="@{!vm.getLoading}"
            android:onClick="@{(v)->presenter.onClick(v)}"
            android:text="@{vm.getLoading ? @string/login_loading : @string/login}"

            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_login_forget_password" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{(v)->presenter.onClick(v)}"
            android:text="@string/login_register"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>