<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="android.view.View.OnClickListener" />

        <variable
            name="userInfo"
            type="com.github.wkw.share.vo.UserInfo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_nav_header"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/nav_header_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingLeft="@dimen/nav_header_padding">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_header_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@{userInfo.nickname}"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:text="吴帅气" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_avatar"
                android:layout_width="@dimen/nav_avatar"
                android:layout_height="@dimen/nav_avatar"
                android:layout_marginBottom="25dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@id/tv_header_name"
                app:layout_constraintLeft_toLeftOf="parent"
                bind:url="@{userInfo.avatar}"
                tools:src="@drawable/ic_default_avatar" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nav_info"
            style="@style/nav_text"
            android:drawableStart="@drawable/ic_home"
            android:text="@string/home_page"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_nav_header" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nav_follow"
            style="@style/nav_text"
            android:drawableStart="@drawable/ic_home"
            android:onClick="@{(v)->presenter.onClick(v)}"
            android:text="@string/follow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nav_info" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nav_setting"
            style="@style/nav_text"
            android:drawableStart="@drawable/ic_home"
            android:onClick="@{(v)->presenter.onClick(v)}"
            android:text="@string/setting"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nav_follow" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nav_about"
            style="@style/nav_text"
            android:drawableStart="@drawable/ic_home"
            android:text="@string/about"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nav_setting" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>