<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userInfo"
            type="com.github.wkw.share.vo.UserInfo" />

        <variable
            name="presenter"
            type="android.view.View.OnClickListener" />
    </data>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.MainActivity">


            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:title="@string/app_name"
                    app:titleTextColor="@color/app_title" />

                <android.support.design.widget.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabIndicatorColor="@color/tab_select_text"
                    app:tabSelectedTextColor="@color/tab_select_text"
                    app:tabTextColor="@color/tab_un_select_text" />
            </android.support.design.widget.AppBarLayout>


            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />


            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/menu_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="40dp"
                fab:menu_labels_style="@style/menu_labels_style"
                fab:menu_labels_showAnimation="@anim/jump_from_down"
                fab:menu_labels_hideAnimation="@anim/jump_to_down"
                fab:menu_animationDelayPerItem="0"
                fab:menu_shadowColor="#444"
                fab:menu_colorNormal="#FFB805"
                fab:menu_colorPressed="#F2AB00"
                fab:menu_colorRipple="#D99200">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_photo"
                    fab:fab_label="@string/community_topic"
                    style="@style/menu_buttons_style" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_community"
                    fab:fab_label="@string/post_topic"
                    style="@style/menu_buttons_style" />
            </com.github.clans.fab.FloatingActionMenu>

        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:itemIconTint="@color/colorPrimary"
            app:itemTextColor="@color/colorPrimary">


            <include
                app:presenter="@{presenter}"
                layout="@layout/nav_header_main"
                app:userInfo="@{userInfo}" />

        </android.support.design.widget.NavigationView>


    </android.support.v4.widget.DrawerLayout>
</layout>